--- a/UDPPeer/UDPClient.rc
+++ b/UDPPeer/UDPClient.rc
@@ -87,15 +87,15 @@ EXSTYLE WS_EX_APPWINDOW
 CAPTION "UDP Peer"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Start Listern",IDOK,85,165,50,16
-    PUSHBUTTON      "Cancel",IDCANCEL,167,165,50,16
-    EDITTEXT        IDC_EDIT1,7,50,306,95,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL
-    LTEXT           "Messages From The Server:",IDC_STATIC,7,32,90,8
-    LTEXT           "Port:",IDC_STATIC,7,14,17,8
-    EDITTEXT        IDC_EDIT3,27,10,50,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "Broadcast",IDC_BUTTON_BROADCAST,22,165,50,16
+    PUSHBUTTON      "Cancel",IDCANCEL,251,165,50,16
+    EDITTEXT        IDC_EDIT_PRINT,7,50,306,95,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL
+    LTEXT           "Other:",IDC_STATIC_PORT,7,14,21,8
     LTEXT           "Message:",IDC_STATIC_MESSAGE,96,14,30,8
     EDITTEXT        IDC_EDIT_MESSAGE,130,10,171,14,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "Send",IDC_BUTTON_SEND,252,29,50,16
+    DEFPUSHBUTTON   "Collect",IDC_BUTTON_COLLECT,136,165,50,16
+    LTEXT           "",IDC_STATIC_PORTNUMBER,29,14,61,8
 END
 
 
