--- a/UDPPeer/UDPClient.rc
+++ b/UDPPeer/UDPClient.rc
@@ -94,8 +94,9 @@ BEGIN
     LTEXT           "Message:",IDC_STATIC_MESSAGE,96,14,30,8
     EDITTEXT        IDC_EDIT_MESSAGE,130,10,171,14,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "Send",IDC_BUTTON_SEND,252,29,50,16
-    DEFPUSHBUTTON   "Collect",IDC_BUTTON_COLLECT,136,165,50,16
+    DEFPUSHBUTTON   "Collect",IDC_BUTTON_COLLECT,103,165,50,16
     LTEXT           "",IDC_STATIC_PORTNUMBER,29,14,61,8
+    DEFPUSHBUTTON   "Connect",IDC_BUTTON_CONNECT,177,165,50,16
 END
 
 
